class LevelUpOption {
    constructor(){
        this.pawn= Pawn
        this.optionsContainerElement=""
        this.optionNameList =[]
        this.optionsElementList=[]
    }
    
    RenderOptionsElement(){}

    AddLevelingEvent(){}

    CreateNewPiece(name,pawn,rowList) {}

}